  dprime_compare, dprime_test, dprime_table and
  posthoc.dprime_compare/posthoc.dprime_test.

September 10. 2013:

- updating various man-pages with 'tetrad' information and links.

October 1. 2013:

- Removing calls to '::' and ':::' in R codebase.
- Moving 'ordinal' from Depends to Suggests, 'numDeriv' from Depends
  to Imports, 'MASS' from Suggests to Imports.
- Adding ByteCompile: yes to Description file.
- Now using import(MASS) to fetch the confint.glm method from MASS and
  adding test for confing.anota to check that the right confint method
  is actually used.
- Deprecating function 'clls'.
- Using if(require(ordinal)) in examples, tests and vignettes where
  needed.
- Adding 'ordinal' to vignetteDepends for the twoACexamples vignette.
- Adding \dontshow{} tests to examples in .Rd files rather than having
  an .Rout.save file in ./tests/Examples to avoid problems with
  minor numerical differences across platforms and architectures.

October 20. 2013:

- Ensuring that the package will work under R-2.15.3 (and older?) by
  modifying tests in discrimSim.Rd and ./inst/tests/test-links.R.

May 7th 2014 (version 1.4-0):

- Implementing support for the Degree-of-Difference method: dod,
  dod_fit, dodSim, dodPwr, dodControl, optimal_tau.

June 25th 2014 (version 1.4-1):

- Allowing negative d-primes in AUC.default (reported by Andreas
  Melzer June 25th 2014)

July 8th 2014 (version 1.4-1)

- Correcting formulae for beta-binomial and chance-corrected
  beta-binomial models in documentation (Thanks to Peter Nowee for
  reporting).
- Adding d.prime0 (value of d-prime under the null hypothesis) as an
  argument to discrim.

December 23rd 2014 (version 1.4-4)

- Coercing package title to title-case.
- Editing dodPwr() example to reduce computation time

January 21st 2015 (version 1.4-5)

- Updating Citation information per CRAN request.

March 2nd 2015 (version 1.4-6)

- Changing package maintainer from Rune H B Christensen to Per B
  Brockhoff.